samples/_failures_safe/1761550755_40db8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0d842be.c: In function ‘main’:
./samples/SAFE/__tmp_d0d842be.c:142:21: error: expected declaration or statement at end of input
  142 |                     filter_level[len - 1] = '\0';
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_d0d842be.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d0d842be.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d0d842be.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d0d842be.c:142:21: error: expected declaration or statement at end of input
